--- a/admin-test.html
+++ b/admin-test.html
@@ -112,6 +112,13 @@
     </div>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
+<!-- 2) Crear cliente Supabase -->
+<script>
+const supabase = supabase.createClient(
+  "https://jwcgiuhdugjunndfpdjr.supabase.co",
+  "eyJhbGciOiJIUzI...", // tu anon key
+);
+</script>
 <script>
 // =============================
 //   ACTUALIZAR AUTOMÁTICO
