--- a/admin-test.html
+++ b/admin-test.html
@@ -116,7 +116,7 @@
 <script>
 const supabase = supabase.createClient(
   "https://jwcgiuhdugjunndfpdjr.supabase.co",
-  "eyJhbGciOiJIUzI...", // tu anon key
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp3Y2dpdWhkdWdqdW5uZGZwZGpyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NTA2NTQsImV4cCI6MjA3ODUyNjY1NH0.llknOTpK1hFMDOjdyDUKUFuiyr0NwwJzNv6YdJbBsRY", // tu anon key
 );
 </script>
 <script>
